kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: weather-app
  labels:
    name: weather-app
