kubernetes/notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier-deployment
  namespace: weather-app
  labels:
    app: notifier-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      restartPolicy: Always
      containers:
        - name: notifier
          image: francesc00/notifier_service_image:base
          imagePullPolicy: Always
          volumeMounts:
            - name: notifier-db-root-psw
              mountPath: /run/secrets/notifier-db-root-psw
              readOnly: true
            - name: app-password
              mountPath: /run/secrets/app-password
              readOnly: True
            - name: email
              mountPath: /run/secrets/email
              readOnly: true
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: notifier-db-root-psw
          secret:
            secretName: notifier-db-root-psw
        - name: email
          secret:
            secretName: email
        - name: app-password
          secret:
            secretName: app-password
