kubernetes/kafka_setup.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: weather-app
  name: kafka-service
  labels:
    app: kafka-service
spec:
  ports:
    - name: kafka-port
      protocol: TCP
      port: 9092
  selector:
    app: kafka-service
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-service
  namespace: weather-app
  labels:
    app: kafka-service
spec:
  serviceName: "kafka-service"
  replicas: 1
  selector:
    matchLabels:
      app: kafka-service
  template:
    metadata:
      labels:
        app: kafka-service
    spec:
      restartPolicy: Always
      containers:
        - name: kafka-service
          image: confluentinc/cp-kafka:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/kafka/data
              name: kafka-data-volume
            - mountPath: /etc/kafka/secrets
              name: kafka-secrets-volume
  volumeClaimTemplates:
    - metadata:
        name: kafka-data-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: kafka-secrets-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
kind: Service
apiVersion: v1
metadata:
  namespace: weather-app
  name: zookeeper
  labels:
    app: zookeeper
spec:
  ports:
    - name: zookeeperp
      protocol: TCP
      port: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-statefulset
  namespace: weather-app
  labels:
    app: zookeeper-statefulset
spec:
  serviceName: "zookeeper"
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      restartPolicy: Always
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/zookeeper/data
              name: zookeeper-data-volume
            - mountPath: /var/lib/zookeeper/log
              name: zookeeper-log-volume
            - mountPath: /etc/zookeeper/secrets
              name: zookeeper-secrets-volume
  volumeClaimTemplates:
      - metadata:
          name: zookeeper-data-volume
        spec:
          accessModes: [ "ReadWriteOnce" ]
          resources:
            requests:
              storage: 1Gi
      - metadata:
          name: zookeeper-log-volume
        spec:
          accessModes: [ "ReadWriteOnce" ]
          resources:
            requests:
              storage: 1Gi
      - metadata:
          name: zookeeper-secrets-volume
        spec:
          accessModes: [ "ReadWriteOnce" ]
          resources:
            requests:
              storage: 1Gi
