kubernetes/um_mysqlDB.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: weather-app
  name: um-mysqldb-service
  labels:
    app: um-mysqldb-service
spec:
  ports:
    - port: 3306
  selector:
    app: um-mysqldb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: um-mysqldb-stateful-set
  namespace: weather-app
  labels:
    app: um-mysqldb-stateful-set
spec:
  serviceName: "um-mysqldb-service"
  replicas: 1
  selector:
    matchLabels:
      app: um-mysqldb
  template:
    metadata:
      labels:
        app: um-mysqldb
    spec:
      restartPolicy: Always
      containers:
        - name: um-mysqldb
          image: mysql:latest
          imagePullPolicy: Always
          ports:
            - name: um-mysqldb-port
              containerPort: 3306
          volumeMounts:
            - name: um-mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: um-db-root-psw
              mountPath: /run/secrets/um-db-root-psw
              readOnly: true
      volumes:
        - name: um-db-root-psw
          secret:
            secretName: um-db-root-psw
  volumeClaimTemplates:
    - metadata:
        name: um-mysql-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
