kubernetes/wms.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: weather-app
  name: wms-service
  labels:
    app: wms-service
spec:
  ports:
    - name: apigw-port
      protocol: TCP
      port: 50051
      targetPort: 50051
    - name: um-port
      protocol: TCP
      port: 50052
      targetPort: 50052
  selector:
    app: wms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wms-deployment
  namespace: weather-app
  labels:
    app: wms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wms
  template:
    metadata:
      labels:
        app: wms
    spec:
      restartPolicy: Always
      containers:
        - name: wms
          image: francesc00/wms_service_image:base
          imagePullPolicy: Always
          ports:
            - name: apigw-port
              containerPort: 50051
            - name: um-port
              containerPort: 50052
          volumeMounts:
            - name: wms-db-root-psw
              mountPath: /run/secrets/wms-db-root-psw
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: wms-db-root-psw
          secret:
            secretName: wms-db-root-psw
