kubernetes/worker.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: weather-app
  name: worker-service
  labels:
    app: worker-service
spec:
  ports:
    - name: prom-port
      protocol: TCP
      port: 50055
      targetPort: 50055
  selector:
    app: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: weather-app
  labels:
    app: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      restartPolicy: Always
      containers:
        - name: worker
          image: francesc00/worker_service_image:base
          imagePullPolicy: Always
          ports:
            - name: prom-port
              containerPort: 50055
          volumeMounts:
            - name: worker-db-root-psw
              mountPath: /run/secrets/worker-db-root-psw
              readOnly: true
            - name: apikey
              mountPath: /run/secrets/apikey
              readOnly: True
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: worker-db-root-psw
          secret:
            secretName: worker-db-root-psw
        - name: apikey
          secret:
            secretName: apikey
