kubernetes/worker_mysqlDB.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: weather-app
  name: worker-mysqlDB-service
  labels:
    app: worker-mysqlDB-service
spec:
  ports:
    - port: 3306
  selector:
    app: worker-mysqlDB
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: worker-mysqlDB-stateful-set
  namespace: weather-app
  labels:
    app: worker-mysqlDB-stateful-set
spec:
  serviceName: "worker-mysqlDB-service"
  replicas: 1
  selector:
    matchLabels:
      app: worker-mysqlDB
  template:
    metadata:
      labels:
        app: worker-mysqlDB
    spec:
      restartPolicy: Always
      containers:
        - name: worker-mysqlDB
          image: mysql:latest
          imagePullPolicy: Always
          ports:
            - name: worker-mysqlDB-port
              containerPort: 3306
          volumeMounts:
            - name: worker-mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: worker-DB-root-psw
              mountPath: /run/secrets/worker-DB-root-psw
              readOnly: true
      volumes:
        - name: worker-DB-root-psw
          secret:
            secretName: worker-DB-root-psw
  volumeClaimTemplates:
    - metadata:
        name: worker-mysql-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
